--- a/projects/my-awesome-lib/package.json
+++ b/projects/my-awesome-lib/package.json
@@ -1,8 +1,3 @@
 {
-  "name": "my-awesome-lib",
-  "version": "0.0.1",
-  "peerDependencies": {
-    "@angular/common": "^8.2.14",
-    "@angular/core": "^8.2.14"
-  }
+  "name": "my-awesome-lib"
 }
