--- a/angular.json
+++ b/angular.json
@@ -1,40 +1,40 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
-  "newProjectRoot": "projects",
+  "newProjectRoot": "",
   "projects": {
     "my-awesome-lib": {
       "projectType": "library",
-      "root": "projects/my-awesome-lib",
-      "sourceRoot": "projects/my-awesome-lib/src",
+      "root": "core",
+      "sourceRoot": "core/src",
       "prefix": "lib",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "tsConfig": "projects/my-awesome-lib/tsconfig.lib.json",
-            "project": "projects/my-awesome-lib/ng-package.json"
+            "tsConfig": "core/tsconfig.lib.json",
+            "project": "core/ng-package.json"
           },
           "configurations": {
             "production": {
-              "tsConfig": "projects/my-awesome-lib/tsconfig.lib.prod.json"
+              "tsConfig": "core/tsconfig.lib.prod.json"
             }
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/my-awesome-lib/src/test.ts",
-            "tsConfig": "projects/my-awesome-lib/tsconfig.spec.json",
-            "karmaConfig": "projects/my-awesome-lib/karma.conf.js"
+            "main": "core/src/test.ts",
+            "tsConfig": "core/tsconfig.spec.json",
+            "karmaConfig": "core/karma.conf.js"
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "projects/my-awesome-lib/tsconfig.lib.json",
-              "projects/my-awesome-lib/tsconfig.spec.json"
+              "core/tsconfig.lib.json",
+              "core/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
